# algoroom

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  package-lock.json  package.json  render.yaml  supervisord.conf
backend/: README.md  alembic.ini  api-guidelines.md  docker-compose.yml  openapi.yaml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  websocket.py
backend/app/routers/: sessions.py
backend/app/services/: session_service.py
backend/tests/: conftest.py  test_integration.py  test_sessions.py  test_websocket.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/api/: sessions.test.ts
frontend/src/__tests__/components/: OutputPanel.test.tsx  SessionControls.test.tsx
frontend/src/__tests__/hooks/: useSession.test.ts
frontend/src/__tests__/integration/: sessionFlow.test.tsx
frontend/src/__tests__/pages/: Home.test.tsx  Session.test.tsx
frontend/src/api/: client.ts  index.ts  sessions.ts  types.ts
frontend/src/api/mocks/: data.ts  handlers.ts
frontend/src/components/: index.ts
frontend/src/components/CodeEditor/: CodeEditor.tsx
frontend/src/components/OutputPanel/: OutputPanel.tsx
frontend/src/components/SessionControls/: SessionControls.tsx  index.ts
frontend/src/hooks/: useSession.ts
frontend/src/pages/: Home.tsx  Session.tsx  index.ts
